root/static/less/nav-list.less
.sidebar {
    background: #e9e9e9;
    align-self: stretch;
}

.nav-list {
    float: left;
    line-height: 1.54em;
    padding: 16px 25px 25px;
    width: @sidebar-width;
    z-index: 2;

    .nav-header {
        padding: 0;
        margin-top: 20px;
    }

    .nav-header.no-margin-top {
        margin-top: 0;
    }

    a,
    .btn-link {
        color: @gray-base;
        font-size: 14px;
    }
    li + li.nav-header {
        margin-top: 10px;
    }

    .fa,
    .glyphicon {
        margin-right: 2px;
    }

    .sidebar-icon {
        display: inline-block;
        width: 1.25em;
        text-align: center;
        margin-right: 4px;
        color: #555;
    }

    .sidebar-icon + img {
        margin-right: 4px;
    }

    select,
    input[type="text"] {
        line-height: normal;
    }

    form {
        margin: 0;
    }

    form label {
        font-size: 14px;
        font-weight: normal;
        color: #555;
        margin-bottom: 2px;
    }

    &.box-right {
        padding-left: 10px;
    }

    > .active {
        > a,
        > a:hover,
        > a:focus {
            color: @gray-base !important;
            background-color: #ddd !important;
        }
    }

    hr {
        border: 0;
        border-top: 1px solid #d0d0d0;
        margin: 8px 0 0;
    }
}

.nav-header {
    display: block;
    padding: 3px 15px;
    font-size: 0.9em;
    font-weight: bold;
    color: #555;
    text-transform: none;
}

.nav-sub-label {
    font-size: 0.8em;
    color: #555;
    margin-top: 6px;
}

